Приложении при открытии запрашивает разрешение на чтение контактов. Контакты выводятся в алфавитном порядке, у каждого доступно 2 кнопки - позвонить и смс. При нажатии - запрашивается соотвествующее разрешение. После выдачи разрешения необходимо нажать еще раз для совершения действия. при нажатии на смс переходим в другое окно где надо ввести текст смс и нажать кнопку отправить, после чего показывается уведомление об отправке сообщения и мы возвращаемся к экрану с контактами. Для кнопок сделаны анимации.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">16_2_Permissions</string>
+    <string name="app_name">16_3_ContentProvider</string>
     <string name="toolbarTitle">Предоставление разрешений</string>
     <string name="exit">Выход</string>
 
@@ -7,5 +7,9 @@
     <string name="contactsBTN_text">Доступ к контактам</string>
     <string name="contactName_text">Имя</string>
     <string name="contactPhoneNumber_text">Телефон</string>
+    <string name="sms_text">Введите сообщение</string>
+    <string name="sendSMS_BTNtext">Отправить</string>
+    <string name="callBTN_text">Вызов</string>
+    <string name="smsBTN_text">СМС</string>
 
 </resources>
