--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,8 @@
 <resources>
     <string name="app_name">16_3_ContentProvider</string>
-    <string name="toolbarTitle">Предоставление разрешений</string>
+    <string name="toolbarTitle">Мои контакты</string>
     <string name="exit">Выход</string>
 
-    <string name="cameraBTN_text">Доступ к камере</string>
-    <string name="contactsBTN_text">Доступ к контактам</string>
     <string name="contactName_text">Имя</string>
     <string name="contactPhoneNumber_text">Телефон</string>
     <string name="sms_text">Введите сообщение</string>
