Сделан большой рефакторинг кода. Добавлена функциональность добавления контакта. Добавлен searchView для фильтрации контактов
Есть баг, от которого я пока не избавился. При фильтрации контактов и нажатии на отфильтрованном контакте кнопки СМС на следующем экране не отображается стрелка назад, т.к. не отрабатывает backButton = toolbar.findViewById(R.id.back_button) ?: return и метод setupToolbar завершается.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,14 @@
     <string name="sendSMS_BTNtext">Отправить</string>
     <string name="callBTN_text">Вызов</string>
     <string name="smsBTN_text">СМС</string>
+    <string name="nameET_hint">Введите имя</string>
+    <string name="phoneET_hint">Введите телефон</string>
+    <string name="newContact_text">Новый контакт</string>
+    <string name="addContactBTN_text">Добавить</string>
+
+    <string name="fill_all_fields">Пожалуйста, заполните все поля.</string>
+    <string name="contact_added">Контакт успешно добавлен!</string>
+    <string name="permission_denied">В доступе отказано</string>
+    <string name="search">Фильтр</string>
 
 </resources>
